cleanup only Junit 5